Fix wrap issue, align vertically, fix divider

--- a/Loba/inc/style.css
+++ b/Loba/inc/style.css
@@ -60,7 +60,7 @@ body {
 	position: relative;
 	display: flex;
 	flex-direction: row;
-	flex-wrap: wrap;
+	flex-wrap: nowrap;
 	z-index: 1;
 	width: 100%;
 	height: 100%;
@@ -72,8 +72,10 @@ body {
 .row {
 	display: flex;
 	flex-direction: row;
-	flex-wrap: wrap;
+	flex-wrap: nowrap;
+	align-items: center;
 	width: 100%;
+	height: 100%;
 	gap: 1rem;
 }
 .row:first-child:before {
@@ -89,8 +91,7 @@ body {
 }
 .column {
 	padding: 20px 0px 0px 0px;
-	height: 100%;
-	display: flex;
+	/*display: flex;*/
 	flex-direction: column;
 	justify-content: center;
 	flex-basis: 100%;
